--- a/content/40.units_and_quantities.md
+++ b/content/40.units_and_quantities.md
@@ -198,22 +198,60 @@ The change of physical length is illustrated by the following example, of two da
 5.55517285026e+26 cm 
 ```
 
+### Unit systems {#sec:unit-systems}
+
 ### Unit conversions {#sec:unit-conversions}
 
 Aside from the ability to carry units through calculations, the other basic need for having a units implementation in `yt` is to be able to perform conversions of arrays from one unit to another of the same dimension. Creating a new array or quantity from an existing one can be done using the `in_units` method (or the `to` method, which is a convenient alias):
 
 ```python
+>>> import yt 
+>>> ds = yt.load("GasSloshing/sloshing_nomag2_hdf5_plt_cnt_0100")
+>>> sp = ds.sphere("c", (100.0, "kpc"))
+>>> print(sp["gas","velocity_x"])
+[-4793397.  -5297494.5 -4997635.  ... 10608344.  10382381.  10529207. ] cm/s
+>>> print(sp["gas","velocity_x"].in_units("mile/hr"))
+[-107225.23711525 -118501.57704009 -111793.91105941 ...  237301.89692198
+  232247.24856836  235531.65264853] mile/hr
+>>> print(sp["gas","pressure"])
+[1.62223415e-10 1.60880725e-10 1.62334618e-10 ... 1.54101079e-10
+ 1.52756530e-10 1.53220436e-10] dyn/cm**2
+>>> print(sp["gas","pressure"].to("J/m**3"))
+[1.62223415e-11 1.60880725e-11 1.62334618e-11 ... 1.54101079e-11
+ 1.52756530e-11 1.53220436e-11] J/m**3
 ```
 
 To convert an array in-place instead of making a copy, use `convert_to_units`:
 
-
 ```python
+>>> momentum_y = sp["gas","mass"]*sp["gas","velocity_y"]
+>>> print(momentum_y)
+[1.45031068e+47 1.40467746e+47 1.42059875e+47 ... 1.01206589e+47
+ 9.94539437e+46 1.06969711e+47] cm*g/s
+>>> momentum_y.convert_to_units("Msun*kpc/Myr")
+>>> print(momentum_y)
+[745945.76032301 722474.98923595 730663.86660289 ... 520541.05697294
+ 511526.58818102 550182.82006007] Msun*kpc/Myr
 ```
 
 Naturally, attempting to convert an array to units with a different dimension raises an error (in most cases, see below for exceptions):
 
 ```python
+>>> print(momentum_y.to("degC"))
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+  File "/Users/jzuhone/mambaforge/envs/py311/lib/python3.11/site-packages/unyt/array.py", line 947, in to
+    return self.in_units(units, equivalence=equivalence, **kwargs)
+           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+  File "/Users/jzuhone/mambaforge/envs/py311/lib/python3.11/site-packages/unyt/array.py", line 874, in in_units
+    (conversion_factor, offset) = self.units.get_conversion_factor(
+                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+  File "/Users/jzuhone/mambaforge/envs/py311/lib/python3.11/site-packages/unyt/unit_object.py", line 694, in get_conversion_factor
+    return _get_conversion_factor(self, other_units, dtype)
+           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+  File "/Users/jzuhone/mambaforge/envs/py311/lib/python3.11/site-packages/unyt/unit_object.py", line 939, in _get_conversion_factor
+    raise UnitConversionError(
+unyt.exceptions.UnitConversionError: Cannot convert between 'Msun*kpc/Myr' (dim '(length)*(mass)/(time)') and '°C' (dim '(temperature)').
 ```
 
 #### Equivalencies {#sec:equivalencies}
@@ -232,11 +270,14 @@ As described above, conversions between quantities in different units is general
 ```python
 >>> import unyt as u
 >>> kT = 5.0*u.keV
->>> print(kT.to_equivalent("K", "thermal")) # converting kT (energy) to T (temperature)
+>>> # converting kT (energy) to T (temperature)
+>>> print(kT.to_equivalent("K", "thermal"))
 34813557.843240075 K
->>> print(kT.to_equivalent("angstrom", "spectral")) # converting kT (energy) to Angstrom (wavelength)
+>>> # converting kT (energy) to Angstrom (wavelength)
+>>> print(kT.to_equivalent("angstrom", "spectral"))
 4.132806438406553 Å
->>> print(u.mp.to_equivalent("pm", "compton")) # print the proton's compton wavelength in picometers 
+>>> # print the proton's compton wavelength in picometers 
+>>> print(u.mp.to_equivalent("pm", "compton"))
 0.00132141 pm
 ```
 
@@ -245,7 +286,8 @@ These equivalencies are straightforward--in the case of others, more information
 ```python
 >>> import unyt as u
 >>> T = 1.0e6*u.K
->>> print(T.to_equivalent("km/s", "sound_speed")) # default gamma = 5/3 and mu = 0.6
+>>> # default gamma = 5/3 and mu = 0.6
+>>> print(T.to_equivalent("km/s", "sound_speed"))
 151.372499274441 km/s
 >>> print(T.to_equivalent("km/s", "sound_speed", mu=1.0))
 117.25263375274085 km/s
@@ -267,8 +309,68 @@ For convenience, the same operations can actually be carried out simply using th
 
 #### Conversions between electromagnetic units in different systems
 
-Conversions between different electromagnetic units require special handling in many cases. The reason for this is that the units for many electromagnetic quantities do not have the same dimensions between the Gaussian cgs and the SI unit systems. For illustration, let us consider the units of magnetic field strength. Superficially, it would appear that there is a simple conversion between the cgs units of gauss (\rm{G}) and the SI units of tesla (\rm{T}), since numerically 1~\rm{G} = 10^{-4}~\rm{T}. However, if we examine the base units, we find that they have different dimensions:
+Conversions between different electromagnetic units require special handling in many cases. The reason for this is that the units for many electromagnetic quantities do not have the same dimensions between the Gaussian CGS and the SI unit systems. For illustration, let us consider the units of magnetic field strength. Superficially, it would appear that there is a simple conversion between the cgs units of gauss ($\rm{G}$) and the SI units of tesla ($\rm{T}$), since numerically $1~\rm{G} = 10^{-4}~\rm{T}$. However, if we examine the base units, we find that they have different dimensions:
 
+$$
+\mathrm{CGS:} 1~\mathrm{G} = 1~\frac{\sqrt{\mathrm{g}}}{\sqrt{\mathrm{cm}}\cdot\mathrm{s}} \\
+\mathrm{SI:} 1~\mathrm{T} = 1~\frac{\mathrm{kg}}{\mathrm{A}\cdot{\mathrm{s}}}
+$$
+
+The reason for this has already been noted above: the SI system has a base unit of current (the ampere), and all other electromagnetic units in SI are derived from it and combinations of other units. `unyt` handles conversions between electromagnetic quantities with _atomic_ units between CGS and SI systems, under the hood despite this difference:
+
+```python
+>>> import unyt as u
+>>> I = 10.0*u.A
+>>> print(I.units.dimensions)
+(current_mks)
+>>> Icgs = I.to("statA")
+>>> print(Icgs)
+2997924580.0 statA
+>>> print(Icgs.units.dimensions)
+(length)**(3/2)*sqrt((mass))/(time)**2
+>>> B = 1.0e-4*u.T
+>>> print(B.units.dimensions)
+(mass)/((current_mks)*(time)**2)
+>>> Bcgs = B.to("G")
+>>> print(Bcgs)
+1.0 G
+>>> print(Bcgs.units.dimensions)
+sqrt((mass))/(sqrt((length))*(time))
+>>> Vcgs = 1.0*u.statV
+>>> print(Vcgs.units.dimensions)
+sqrt((length))*sqrt((mass))/(time)
+>>> Vsi = Vcgs.to("V")
+>>> print(Vsi)
+0.0033356409519815205 V
+>>> print(Vsi.units.dimensions)
+(length)**2*(mass)/((current_mks)*(time)**3)
+```
+
+Because it is more difficult to handle non-atomic conversions easily, these will still raise errors:
+
+```python
+>>> import unyt as u
+>>> # 3D current density in SI units
+>>> J = 1.0*u.A/u.m**3 
+>>> # attempt to convert to the same quantity in Gaussian CGS units
+>>> print(J.to("statA/cm**3"))
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+  File "/Users/jzuhone/mambaforge/envs/py311/lib/python3.11/site-packages/unyt/array.py", line 947, in to
+    return self.in_units(units, equivalence=equivalence, **kwargs)
+           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+  File "/Users/jzuhone/mambaforge/envs/py311/lib/python3.11/site-packages/unyt/array.py", line 874, in in_units
+    (conversion_factor, offset) = self.units.get_conversion_factor(
+                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+  File "/Users/jzuhone/mambaforge/envs/py311/lib/python3.11/site-packages/unyt/unit_object.py", line 694, in get_conversion_factor
+    return _get_conversion_factor(self, other_units, dtype)
+           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+  File "/Users/jzuhone/mambaforge/envs/py311/lib/python3.11/site-packages/unyt/unit_object.py", line 939, in _get_conversion_factor
+    raise UnitConversionError(
+unyt.exceptions.UnitConversionError: Cannot convert between 'A/m**3' (dim '(current_mks)/(length)**3') and 'statA/cm**3' (dim 'sqrt((mass))/((length)**(3/2)*(time)**2)').
+```
+
+For these cases, it is recommended to convert atomic electromagnetic units separately first in equations, if necessary.
 
 ### Creating unyt_array and unyt_quantity instances {#sec:creating-ytarray-and-ytquantity-instances}
 
@@ -340,3 +442,6 @@ True
 >>> print(my_kg/my_g)
 1000.0 dimensionless
 ```
+
+### Importing and exporting units {#sec:importing-exporting-units}
+
