--- a/content/40.units_and_quantities.md
+++ b/content/40.units_and_quantities.md
@@ -376,7 +376,7 @@ For these cases, it is recommended to convert atomic electromagnetic units separ
 
 Aside from converting an array to new units as described above, there are two further ways to create new array and quantity objects: via a constructor, and by multiplying scalar data by a unit quantity.
 
-#### Class Constructor {#sec:class-constructor}
+#### Class constructor {#sec:class-constructor}
 
 The primary internal interface for creating new arrays and quantities is through the class
 constructor for `unyt_array`. The constructor takes three arguments. The first argument is the input
@@ -445,3 +445,51 @@ True
 
 ### Importing and exporting units {#sec:importing-exporting-units}
 
+Arrays from `unyt` can be exported and imported in a few different ways. 
+
+#### Writing `unyt_array`s to disk 
+
+`unyt_array`s can be serialized to disk in either ASCII or HDF5 format. 
+For ASCII, use `unyt.savetxt` (with similar syntax as `numpy.savetxt` to write 
+one or more arrays:
+
+```python
+>>> import unyt as u
+>>> a = [1, 2, 3]*u.cm
+>>> b = [8, 10, 12]*u.cm/u.s
+>>> c = [2, 85, 9]*u.g
+>>> u.savetxt("sphere.dat", [a,b,c], header='My sphere stuff',
+...           delimiter="\t")
+```
+
+and `unyt.loadtxt` to read them back in:
+
+```python
+>>> temp, velx = u.loadtxt("disk.dat", usecols=(1,2), delimiter="\t")
+```
+
+
+#### Exporting `unyt_array`s to other unit packages
+
+It is possible to export an `unyt_array` or an `unyt_quantity` to equivalent
+objects in two other symbolic unit packages: [`Pint`](https://pint.readthedocs.io)
+and [`AstroPy`](https://www.astropy.org). To convert to a `Pint` `Quantity` object, 
+the `to_pint` method is used:
+
+```python
+>>> from unyt import cm, s
+>>> a = 4*cm**2/s
+>>> print(a)
+4 cm**2/s
+>>> a.to_pint()
+<Quantity(4, 'centimeter ** 2 / second')>
+```
+
+Similarly, to convert to an `AstroPy` `Quantity` object, use `to_astropy`:
+
+```python
+>>> from unyt import g, cm
+>>> data = [3, 4, 5]*g/cm**3
+>>> data.to_astropy()
+<Quantity [3., 4., 5.] g / cm3>
+```
