--- a/content/40.units_and_quantities.md
+++ b/content/40.units_and_quantities.md
@@ -53,7 +53,7 @@ correctly when composing quantities from arrays, physical constants, and unitles
 In what follows, we will refer to both array and scalar quantities as arrays generically for the
 purpose of brevity.
 
-### Implementation {#sec:units-implementation}
+### Basic implementation {#sec:units-implementation}
 
 The unit implementation in `unyt` is based upon the notion of dimensionality. `unyt` has 8 base
 dimensions: `mass`, `length`, `time`, `temperature`, `current_mks`, `luminous_intensity`, `angle`,
@@ -70,9 +70,19 @@ there is a dimension of "amount of substance", for which the base unit is mole, 
 `mol` unit is treated as dimensionless. The `logarithmic` dimension is a special case which will be
 described in more detail below. 
 
-For each dimension, we choose a base unit. The default base units for the first six dimensions mentioned above in `unyt` are from the SI system: kilograms, meters, seconds, kelvin, ampere, and candela. The default base unit for the `angle` dimension is radian, and the default base unit for the `logarithmic` dimension is the "neper", which is a logarithmic unit for ratios of quantities such as field strenth or power. All other units can be described as combinations of these base units along with a conversion factor to equivalent base units.
+For each dimension, we choose a base unit. The default base units for the first six dimensions
+mentioned above in `unyt` are from the SI system: kilograms, meters, seconds, kelvin, ampere, and
+candela. The default base unit for the `angle` dimension is radian, and the default base unit for
+the `logarithmic` dimension is the "neper", which is a logarithmic unit for ratios of quantities
+such as field strenth or power. All other units can be described as combinations of these base units
+along with a conversion factor to equivalent base units.
 
-For historical and practical reasons, the default base units in `yt` itself are the "Gaussian" centimeters-grams-seconds (CGS) system, where grams and centimeters serve as the different base units for mass and length, the other base units remaining the same as SI, though formally there are no independent base units for luminous intensity or current in CGS systems. CGS was chosen for `yt` to stay consistent with the rest of the `yt` codebase prior to `yt` 3.0 and to reflect the standard practice in astrophysics. 
+For historical and practical reasons, the default base units in `yt` itself are the "Gaussian"
+centimeters-grams-seconds (CGS) system, where grams and centimeters serve as the different base
+units for mass and length, the other base units remaining the same as SI, though formally there are
+no independent base units for luminous intensity or current in CGS systems. CGS was chosen for `yt`
+to stay consistent with the rest of the `yt` codebase prior to `yt` 3.0 and to reflect the standard
+practice in astrophysics. 
 
 In any case, using a **physical** unit system makes it possible to compare quantities and arrays
 produced by different datasets, possibly with different conversion factors to CGS and to code units.
@@ -87,24 +97,26 @@ dimensions of `Msun / Mpc**3` are `mass / length**3` and the CGS conversion fact
 \times 10^{-41}$.
 
 We use the `UnitRegistry` class to define all valid atomic units. All unit registries contain a unit
-symbol lookup table (in a Python `dict`) containing the valid units' dimensionality and cgs
-conversion factor. Here is what it would look like with the above units:
+symbol lookup table (in a Python `OrderedDict`) containing for each unit in a tuple the conversion factor to SI units, the dimensionality, the additive offset for the unit, a string representing how the unit should be displayed in plots and other media, and a boolean dictating whether the unit is SI-prefixable. 
+Here is what it would look like with the above units:
 
 ```python
-{ "g":    (mass, 1.0),
-  "erg":  (mass * length**2 * time**-2, 1.0),
-  "Msun": (mass, 1.98892e+33),
-  "pc":   (length, 3.08568e18), }
+{ 
+    "g":    (1.0e-3, dimensions.mass, 0.0, r"\rm{g}", True),
+    "erg":  (1.0e-7, dimensions.energy, 0.0, r"\rm{erg}", True),
+    "Msun": (mass_sun_kg, dimensions.mass, 0.0, r"\rm{M}_\odot", False),
+    "pc":   (m_per_pc, dimensions.length, 0.0, r"\rm{pc}", True), 
+    "degC": (1.0, dimensions.temperature, -273.15, r"^\circ\rm{C}", True),
+}
 ```
 
 Note that we only define **atomic** units here. There should be no operations or SI prefixes in the
 registry symbol strings. When we parse non-atomic units like `Msun/Mpc**3`, we use the registry to
 look up the symbols. The unit system in `yt` knows how to handle units like `Mpc` by looking up unit
-symbols with and without prefixes and modify the conversion factor appropriately.
+symbols with and without prefixes and modify the conversion factor appropriately. Note also that in most cases the "additive offset" will be 0--it applies mainly to temperature scales like Fahrenheit and Celsius where the zero-point of the scale are not equivalent between the two scales, and are also not equivalent to "zero thermal energy", for which the relevant temperature units are Rankine and Kelvin, respectively.
 
-We construct a `Unit` object by providing a string containing atomic unit symbols, combined with
-operations in Python syntax, and the registry those atomic unit symbols are defined in. We use
-`sympy`'s string parsing features to create the unit expression from the user-provided string.
+We construct a `Unit` object by providing a string containing atomic unit symbols, combined with operations in Python syntax, and the registry those atomic unit symbols are defined in. We use
+`sympy`'s string parsing features to create the unit expression from the user-provided string. 
 
 `Unit` objects are associated with four instance members, a unit `Expression` object, a
 dimensionality `Expression` object, a `UnitRegistry` instance, and a scalar conversion factor to CGS
@@ -118,43 +130,24 @@ units and `False` otherwise. `Unit` also defines the `mul`, `div`, `pow`, and `e
 other unit objects, making it easy to compose compound units algebraically.
 
 The `UnitRegistry` class provides the `add`, `remove`, and `modify` methods which allows users to
-add, remove, and modify atomic unit definitions present in `UnitRegistry` objects. A dictionary
-lookup table is also attached to the `UnitRegistry` object, providing an interface to look up unit
-symbols. In general, unit registries should only be adjusted inside of a code frontend, since
-otherwise quantities and arrays might be created with inconsistent unit metadata. Once a `Unit`
-object is created, it will not receive updates if the original unit registry is modified.
+add, remove, and modify atomic unit definitions present in `UnitRegistry` objects. In general, unit registries should only be adjusted inside of a code frontend, since otherwise quantities and arrays might be created with inconsistent unit metadata. Once a `Unit` object is created, it will not receive updates if the original unit registry is modified.
+
+#### Code units {#sec:code-units}
 
 When a `Dataset` object is instantiated, it will itself instantiate and set up a `UnitRegistry`
-class that contains a full set of units that are defined for the simulation. This registry includes
-not only concrete physical units like `cm` or `K`, but also unit symbols that correspond to the unit
-system used internally in the simulation.
+class (stored in its `unit_registry` attribute) that contains a full set of units that are defined
+for the simulation. This registry includes not only the aforementioned concrete physical units like
+`cm` or `K`, but also unit symbols that correspond to the unit system used internally in the
+simulation. These units are instantiated via the concept of "code units", which are tightly coupled
+to on-disk parameters. Examples of such units are `code_length`, `code_mass`, `code_time`,
+`code_velocity`, `code_density`, `code_magnetic`, `code_pressure`, and `code_metallicity`. When
+creating a `Dataset`'s `UnitRegistry`, `yt` is able to also determine conversions between these
+units and physical units in both directions. Code units therefore preserve dimensionality: an array
+or quantity that has units of `cm` will be convertible to `code_length`, for example, and
+vice-versa.
 
-The `Dataset`-specific `UnitRegistry` also lets us encode the simulation unit system and scaling to
-physical units directly into `yt`. We do this via "code units". Every `Dataset` has a `length_unit`,
-`time_unit`, and `mass_unit` attributes that the user can quickly and easily query to discover the
-base units of the simulation. For example:
-
-```python
->>> import yt
->>> ds = yt.load("Enzo_64/DD0043/data0043")
->>> print(ds.length_unit)
-128 Mpccm/h
->>> print(ds.quan(1.0, "code_length").in_units("Mpccm/h"))
-128.0 Mpccm/h
->>> print(ds.length_unit.in_cgs())
-5.555172850264421e+26 cm
-```
-
-### Handling code units {#sec:handling-code-units}
-
-Code units are tightly coupled to on-disk parameters. To handle this, the `yt` unit system can modify, add, and remove unit symbols via the `UnitRegistry`.
-
-Optionally, `velocity_unit`, `density_unit`, `pressure_unit`, `temperature_unit`, and `magnetic_unit` may be defined as well if the units for these fields cannot be inferred from the mass, length, and time units.
-
-We also allow conversions to the simulation unit system. Data in code units are available by converting to `code_length`, `code_mass`, `code_time`, `code_velocity`, `code_density`, `code_magnetic`, `code_pressure`, `code_metallicity`, or any combination of those units.
-Code units preserve dimensionality: an array or quantity that has units of `cm` will be convertible to `code_length`.
-
-On-disk fields are presented in these unconverted code units. To obtain on-disk data, a user need only query a data object using an on-disk field name:
+On-disk fields are presented in these unconverted code units. To obtain on-disk data, a user need
+only query a data object using an on-disk field name:
 
 ```python
 >>> import yt
@@ -163,28 +156,50 @@ On-disk fields are presented in these unconverted code units. To obtain on-disk 
 >>> print(dd["enzo", "Density"])
 [6.74e-02 6.12e-02 8.92e-02 ... 
  9.09e+01 5.66e+01 4.27e+01] code_mass/code_length**3
+>>> # ("gas", "density") is the same field, but presented in physical units
 >>> print(dd["gas", "density"])
 [1.92e-31 1.74e-31 2.54e-31 ... 
  2.59e-28 1.61e-28 1.22e-28] g/cm**3
 ```
 
-Here, the first data object query is returned in code units, while the second is returned in CGS units.
-This is because `("enzo", "Density")` is an on-disk field, while `("gas", "density")` is an internal `yt` field, aliased to the former. 
+Here, the first data object query is returned in code units, while the second is returned in CGS
+units. This is because `("enzo", "Density")` is an on-disk field, while `("gas", "density")` is an
+internal `yt` field, aliased to the former. 
 
-#### Associating arrays with a coordinate system {#sec:associating-arrays-with-a-coordinate-system}
+In the `set_code_units` method of the `Dataset` base class, the predefined `code_mass`,
+`code_length`, `code_time`, `code_velocity`, and `code_magnetic` symbols are adjusted to the
+appropriate values, and `length_unit`, `time_unit`, `mass_unit`, `velocity_unit`, and
+`magnetic_unit` attributes are attached to the `Dataset` instance. If there are frontend-specific
+code units, they should also be defined in subclasses by extending this function.
 
-To create quantities and arrays in units defined by a simulation coordinate system, we associate a `UnitRegistry` instance with `Dataset` instances.
-This unit registry contains the metadata necessary to convert the array to CGS from some other known unit system and is available via the `unit_registry` attribute that is attached to all `Dataset` instances.
+When code units are set up for a `Dataset`, `unyt_quantity` instances corresponding to these code units are also set up and added as attributes to the `Dataset`. Examples are `length_unit`, `time_unit`, `mass_unit`, `velocity_unit`, and `magnetic_unit`:
 
-In the `set_code_units` method of the `Dataset` base class, the predefined `code_mass`, `code_length`, `code_time`, `code_velocity`, and `code_magnetic` symbols are adjusted to the appropriate values, and `length_unit`, `time_unit`, `mass_unit`, `velocity_unit`, and `magnetic_unit` attributes are attached to the `Dataset` instance. If there are frontend-specific code units, they should also be defined in subclasses by extending this function.
+```python
+>>> import yt
+>>> ds = yt.load("Enzo_64/DD0043/data0043")
+>>> print(ds.length_unit)
+128 Mpccm/h
+>>> print(ds.length_unit.in_cgs())
+5.555172850264421e+26 cm
+```
 
-### Handling cosmological units {#sec:handling-cosmological-units}
+Optionally, `density_unit`, `pressure_unit`, `temperature_unit`, and may be defined as well if the units for these fields cannot be inferred from the mass, length, and time units.
 
-A special case of astrophysical hydrodynamical simulations are cosmological simulations, which attempt to simulate the evolution of structure on cosmological length and time scales. Such simulations use "comoving coordinates", which is a notion of length that does not change with the expansion of the universe, in contrast to normal physical distances which do. 
+#### Handling cosmological units {#sec:handling-cosmological-units}
 
-If we detect that we are loading a cosmological simulation performed in comoving coordinates, extra comoving units are added to the dataset's unit registry. Comoving length unit symbols are still named following the pattern `<length symbol>cm`, i.e. `Mpccm`. The $h$ symbol is treated as a base unit, `h`, which defaults to unity. The `Dataset.set_units` method updates the `h` symbol to the correct value when loading a cosmological simulation.
+A special case of astrophysical hydrodynamical simulations are cosmological simulations, which
+attempt to simulate the evolution of structure on cosmological length and time scales. Such
+simulations use "comoving coordinates", which is a notion of length that does not change with the
+expansion of the universe, in contrast to normal physical distances which do. 
 
-The change of physical length is illustrated by the following example, of two datasets from the same simulation but at different times/scale factors/redshifts:
+If we detect that we are loading a cosmological simulation performed in comoving coordinates, extra
+comoving units are added to the dataset's unit registry. Comoving length unit symbols are still
+named following the pattern `<length symbol>cm`, i.e. `Mpccm`. The $h$ symbol is treated as a base
+unit, `h`, which defaults to unity. The `Dataset.set_units` method updates the `h` symbol to the
+correct value when loading a cosmological simulation.
+
+The change of physical length is illustrated by the following example, of two datasets from the same
+simulation but at different times/scale factors/redshifts:
 
 ```python
 >>> import yt
@@ -200,9 +215,15 @@ The change of physical length is illustrated by the following example, of two da
 
 ### Unit systems {#sec:unit-systems}
 
+As noted above, the default unit system in `yt` for almost all datasets is the Gaussian CGS system.
+
+
 ### Unit conversions {#sec:unit-conversions}
 
-Aside from the ability to carry units through calculations, the other basic need for having a units implementation in `yt` is to be able to perform conversions of arrays from one unit to another of the same dimension. Creating a new array or quantity from an existing one can be done using the `in_units` method (or the `to` method, which is a convenient alias):
+Aside from the ability to carry units through calculations, the other basic need for having a units
+implementation in `yt` is to be able to perform conversions of arrays from one unit to another of
+the same dimension. Creating a new array or quantity from an existing one can be done using the
+`in_units` method (or the `to` method, which is a convenient alias):
 
 ```python
 >>> import yt 
@@ -234,7 +255,8 @@ To convert an array in-place instead of making a copy, use `convert_to_units`:
  511526.58818102 550182.82006007] Msun*kpc/Myr
 ```
 
-Naturally, attempting to convert an array to units with a different dimension raises an error (in most cases, see below for exceptions):
+Naturally, attempting to convert an array to units with a different dimension raises an error (in
+most cases, see below for exceptions):
 
 ```python
 >>> print(momentum_y.to("degC"))
@@ -265,7 +287,10 @@ transformations which involve physical constants, some examples of which are:
 * Conversions between mass and energy via $E = mc^2$
 * Conversions between density and number density via $n = \rho/({\mu}m_p)$
 
-As described above, conversions between quantities in different units is generally not allowed, but these special cases can be handled using unit equivalencies in `yt`. This is done using the `to_equivalent` method, which takes the unit in a different dimension that you want to convert to, and the equivalence you would like to use: 
+As described above, conversions between quantities in different units is generally not allowed, but
+these special cases can be handled using unit equivalencies in `yt`. This is done using the
+`to_equivalent` method, which takes the unit in a different dimension that you want to convert to,
+and the equivalence you would like to use: 
 
 ```python
 >>> import unyt as u
@@ -281,7 +306,10 @@ As described above, conversions between quantities in different units is general
 0.00132141 pm
 ```
 
-These equivalencies are straightforward--in the case of others, more information may be required. For example, to convert temperature to sound speed via $c_s = \sqrt{\gamma{k_BT}/(\mu{m_p})}$, there are two parameters which may be optionally changed, $\gamma$ and $\mu$, which are the ratio of specific heats and the mean molecular weight, respectively:
+These equivalencies are straightforward--in the case of others, more information may be required.
+For example, to convert temperature to sound speed via $c_s = \sqrt{\gamma{k_BT}/(\mu{m_p})}$, there
+are two parameters which may be optionally changed, $\gamma$ and $\mu$, which are the ratio of
+specific heats and the mean molecular weight, respectively:
 
 ```python
 >>> import unyt as u
@@ -309,14 +337,23 @@ For convenience, the same operations can actually be carried out simply using th
 
 #### Conversions between electromagnetic units in different systems
 
-Conversions between different electromagnetic units require special handling in many cases. The reason for this is that the units for many electromagnetic quantities do not have the same dimensions between the Gaussian CGS and the SI unit systems. For illustration, let us consider the units of magnetic field strength. Superficially, it would appear that there is a simple conversion between the cgs units of gauss ($\rm{G}$) and the SI units of tesla ($\rm{T}$), since numerically $1~\rm{G} = 10^{-4}~\rm{T}$. However, if we examine the base units, we find that they have different dimensions:
+Conversions between different electromagnetic units require special handling in many cases. The
+reason for this is that the units for many electromagnetic quantities do not have the same
+dimensions between the Gaussian CGS and the SI unit systems. For illustration, let us consider the
+units of magnetic field strength. Superficially, it would appear that there is a simple conversion
+between the cgs units of gauss ($\rm{G}$) and the SI units of tesla ($\rm{T}$), since numerically
+$1~\rm{G} = 10^{-4}~\rm{T}$. However, if we examine the base units, we find that they have different
+dimensions:
 
 $$
 \mathrm{CGS:} 1~\mathrm{G} = 1~\frac{\sqrt{\mathrm{g}}}{\sqrt{\mathrm{cm}}\cdot\mathrm{s}} \\
 \mathrm{SI:} 1~\mathrm{T} = 1~\frac{\mathrm{kg}}{\mathrm{A}\cdot{\mathrm{s}}}
 $$
 
-The reason for this has already been noted above: the SI system has a base unit of current (the ampere), and all other electromagnetic units in SI are derived from it and combinations of other units. `unyt` handles conversions between electromagnetic quantities with _atomic_ units between CGS and SI systems, under the hood despite this difference:
+The reason for this has already been noted above: the SI system has a base unit of current (the
+ampere), and all other electromagnetic units in SI are derived from it and combinations of other
+units. `unyt` handles conversions between electromagnetic quantities with _atomic_ units between CGS
+and SI systems, under the hood despite this difference:
 
 ```python
 >>> import unyt as u
@@ -370,11 +407,14 @@ Traceback (most recent call last):
 unyt.exceptions.UnitConversionError: Cannot convert between 'A/m**3' (dim '(current_mks)/(length)**3') and 'statA/cm**3' (dim 'sqrt((mass))/((length)**(3/2)*(time)**2)').
 ```
 
-For these cases, it is recommended to convert atomic electromagnetic units separately first in equations, if necessary.
+For these cases, it is recommended to convert atomic electromagnetic units separately first in
+equations, if necessary.
 
 ### Creating unyt_array and unyt_quantity instances {#sec:creating-ytarray-and-ytquantity-instances}
 
-Aside from converting an array to new units as described above, there are two further ways to create new array and quantity objects: via a constructor, and by multiplying scalar data by a unit quantity.
+Aside from converting an array to new units as described above, there are two further ways to create
+new array and quantity objects: via a constructor, and by multiplying scalar data by a unit
+quantity.
 
 #### Class constructor {#sec:class-constructor}
 
@@ -415,9 +455,10 @@ This example illustrates that the array is being created using `ds.unit_registry
 
 #### Multiplication {#sec:multiplication}
 
-New `unyt_array` and `unyt_quantity` instances can also be created by multiplying `unyt_array`, `unyt_quantity`, or `Unit` instances by `float` or `ndarray` instances. 
-To make it easier to create arrays using this mechanism, we have populated the `unyt` namespace with predefined `Unit` instances that correspond to common unit symbol names.
-For example:
+New `unyt_array` and `unyt_quantity` instances can also be created by multiplying `unyt_array`,
+`unyt_quantity`, or `Unit` instances by `float` or `ndarray` instances. To make it easier to create
+arrays using this mechanism, we have populated the `unyt` namespace with predefined `Unit` instances
+that correspond to common unit symbol names. For example:
 
 ```python
 >>> from unyt import meter, gram, kilogram, second, joule 
@@ -450,7 +491,7 @@ Arrays from `unyt` can be exported and imported in a few different ways.
 #### Writing `unyt_array`s to disk 
 
 `unyt_array`s can be serialized to disk in either ASCII or HDF5 format. 
-For ASCII, use `unyt.savetxt` (with similar syntax as `numpy.savetxt` to write 
+For ASCII, use `unyt.savetxt` (with similar syntax as `numpy.savetxt`) to write 
 one or more arrays:
 
 ```python
@@ -465,8 +506,9 @@ one or more arrays:
 and `unyt.loadtxt` to read them back in:
 
 ```python
->>> temp, velx = u.loadtxt("disk.dat", usecols=(1,2), delimiter="\t")
+>>> vel, mass = u.loadtxt("sphere.dat", usecols=(1,2), delimiter="\t")
 ```
+
 
 
 #### Exporting `unyt_array`s to other unit packages
