--- a/content/40.units_and_quantities.md
+++ b/content/40.units_and_quantities.md
@@ -116,17 +116,8 @@ look up the symbols. The unit system in `yt` knows how to handle units like `Mpc
 symbols with and without prefixes and modify the conversion factor appropriately. Note also that in most cases the "additive offset" will be 0--it applies mainly to temperature scales like Fahrenheit and Celsius where the zero-point of the scale are not equivalent between the two scales, and are also not equivalent to "zero thermal energy", for which the relevant temperature units are Rankine and Kelvin, respectively.
 
 We construct a `Unit` object by providing a string containing atomic unit symbols, combined with operations in Python syntax, and the registry those atomic unit symbols are defined in. We use
-`sympy`'s string parsing features to create the unit expression from the user-provided string. 
-
-`Unit` objects are associated with four instance members, a unit `Expression` object, a
-dimensionality `Expression` object, a `UnitRegistry` instance, and a scalar conversion factor to CGS
-units. These data are available for a `Unit` object by accessing the `expr`, `dimensions`,
-`registry`, and `cgs_value` attributes, respectively.
-
-`Unit` provides the methods `same_dimensions_as`, which returns True if passed a `Unit` object that
-has equivalent dimensions, `get_cgs_equivalent`, which returns the equivalent cgs base units of the
-`Unit`, and the `is_code_unit` property, which is `True` if the unit is composed purely of code
-units and `False` otherwise. `Unit` also defines the `mul`, `div`, `pow`, and `eq` operations with
+`sympy`'s string parsing features to create the unit expression from the user-provided string. Each `Unit`
+object also has its own unit `sympy` `Expression` object, a dimensionality `Expression` object, a `UnitRegistry` instance, a scalar conversion factor to SI units, additive offset value, and display representation. Among other methods, `Unit` defines the `mul`, `div`, `pow`, and `eq` operations with
 other unit objects, making it easy to compose compound units algebraically.
 
 The `UnitRegistry` class provides the `add`, `remove`, and `modify` methods which allows users to
@@ -172,7 +163,7 @@ appropriate values, and `length_unit`, `time_unit`, `mass_unit`, `velocity_unit`
 `magnetic_unit` attributes are attached to the `Dataset` instance. If there are frontend-specific
 code units, they should also be defined in subclasses by extending this function.
 
-When code units are set up for a `Dataset`, `unyt_quantity` instances corresponding to these code units are also set up and added as attributes to the `Dataset`. Examples are `length_unit`, `time_unit`, `mass_unit`, `velocity_unit`, and `magnetic_unit`:
+When code units are set up for a `Dataset`, `unyt_quantity` instances corresponding to these code units are also set up and added as attributes to the `Dataset`. Examples are `length_unit`, `time_unit`, `mass_unit`, and `temperature_unit`:
 
 ```python
 >>> import yt
@@ -183,7 +174,7 @@ When code units are set up for a `Dataset`, `unyt_quantity` instances correspond
 5.555172850264421e+26 cm
 ```
 
-Optionally, `density_unit`, `pressure_unit`, `temperature_unit`, and may be defined as well if the units for these fields cannot be inferred from the mass, length, and time units.
+Optionally, `velocity_unit`, `density_unit`, `pressure_unit`, and `magnetic_unit` may be defined as well,if the units for these fields cannot be inferred from the mass, length, and time units.
 
 #### Handling cosmological units {#sec:handling-cosmological-units}
 
@@ -195,8 +186,8 @@ expansion of the universe, in contrast to normal physical distances which do.
 If we detect that we are loading a cosmological simulation performed in comoving coordinates, extra
 comoving units are added to the dataset's unit registry. Comoving length unit symbols are still
 named following the pattern `<length symbol>cm`, i.e. `Mpccm`. The $h$ symbol is treated as a base
-unit, `h`, which defaults to unity. The `Dataset.set_units` method updates the `h` symbol to the
-correct value when loading a cosmological simulation.
+unit, `h`, which defaults to unity. The `Dataset` updates the `h` symbol to the correct value when
+loading a cosmological simulation.
 
 The change of physical length is illustrated by the following example, of two datasets from the same
 simulation but at different times/scale factors/redshifts:
